--- a/package.json
+++ b/package.json
@@ -4,10 +4,16 @@
   "description": "",
   "main": "script.js",
   "scripts": {
-    "start": "index.html start",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/jydbells/picture-in-picture.git"
+  },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/jydbells/picture-in-picture/issues"
+  },
+  "homepage": "https://github.com/jydbells/picture-in-picture#readme"
 }
