--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "script.js",
   "scripts": {
+    "start": "index.html start",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
